[project]
name = "tuya-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "filius-fall", email = "sreeram596@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "tinytuya>=1.15.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tuya_project"]
